--- a/main.html
+++ b/main.html
@@ -11,6 +11,18 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+<ol>
+	<li data-List-type = "shoppingList" > iPhone 15</li>
+	<li data-List-type = "shoppingList" >  Dress </li>
+	<li data-List-type = "shoppingList" >  Traditional Dress </li>
+</ol>
+
+<ul>
+	<li data-List-type = "holidayList" >  Leh Ladak </li>
+	<li data-List-type = "holidayList" > Kenya </li>
+	<li data-List-type = "holidayList" > Goa </li>
+</ul>
+
 </body>
 
 </html>
