--- a/main.html
+++ b/main.html
@@ -12,15 +12,15 @@
 </script>
 
 <ol>
-	<li data-List-type = "shoppingList" > iPhone 15</li>
-	<li data-List-type = "shoppingList" >  Dress </li>
-	<li data-List-type = "shoppingList" >  Traditional Dress </li>
+	<li data-ns-type = "shoppingList" > iPhone 15</li>
+	<li data-ns-type = "shoppingList" >  Dress </li>
+	<li data-ns-type = "shoppingList" >  Traditional Dress </li>
 </ol>
 
 <ul>
-	<li data-List-type = "holidayList" >  Leh Ladak </li>
-	<li data-List-type = "holidayList" > Kenya </li>
-	<li data-List-type = "holidayList" > Goa </li>
+	<li data-ns-type = "holidayList" >  Leh Ladak </li>
+	<li data-ns-type = "holidayList" > Kenya </li>
+	<li data-ns-type = "holidayList" > Goa </li>
 </ul>
 
 </body>
